--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
         "chart.js": "^3.3.2",
+        "ckeditor4-angular": "^5.2.0",
+        "moment": "^2.30.1",
         "ngx-colors": "^3.6.0",
         "ngx-json-viewer": "^3.2.1",
         "primeflex": "^3.3.1",
